--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 *.zip
 *.tar.gz
 *.rar
-
+*.classpath
+*.project
+lengaburu-traffic/target
+**.settings
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
